Fix navbar alignment issue on Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -617,7 +617,7 @@ body, .raleway{
     text-align: center;
   }
 
-  fieldset h3{
+  fieldset h2{
     font-size: 16px;
     color: #545454;
   }
@@ -769,7 +769,7 @@ body, .raleway{
     }
 
     nav ul li{
-      margin: auto;
+      margin: auto 0;
     }
 
     nav ul a {
@@ -910,7 +910,7 @@ body, .raleway{
       width: 60%;
     }
 
-    fieldset h3{
+    fieldset h2{
       font-size: 20px;
     }
 
@@ -1104,8 +1104,18 @@ body, .raleway{
       min-height: 400px;
     }
 
-    fieldset h3{
+    fieldset h2{
       font-size: 23px;
     }
 
   }
+
+  /* Fix alignment issue on Safari browser - credit (see README) */
+  @media not all and (min-resolution:.001dpcm) { 
+    @media only screen and (min-width: 601px){
+        nav ul li { 
+            margin: auto!important;
+        }
+    }
+  }
+ 
